<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffce42"
    tools:context="com.example.rwadams.tipcalculator.MainActivity">

    <TextView
        android:id="@+id/txtAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="#0000ff"
        android:paddingBottom="20dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="20dp"
        android:text="@string/txtAmt"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtEnterAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAmt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/dollarSign"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtYourTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/txtYourTip"
        android:textSize="30sp"
        android:layout_below="@+id/txtEnterAmt"
        android:layout_alignLeft="@+id/txtEnterAmt"
        android:layout_alignStart="@+id/txtEnterAmt" />

    <RadioGroup
        android:id="@+id/tipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/txtYourTip"
        android:layout_alignLeft="@+id/txtYourTip"
        android:layout_alignStart="@+id/txtYourTip">

        <RadioButton
            android:id="@+id/rad10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/rad10"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/rad15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/rad15"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/rad20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rad20"
            android:textSize="30sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tipPercent"
        android:layout_alignEnd="@+id/txtEnterAmt"
        android:layout_alignRight="@+id/txtEnterAmt"
        android:layout_below="@+id/txtYourTip"
        android:layout_toRightOf="@+id/txtYourTip"
        android:background="@drawable/checkmark" />

    <TextView
        android:id="@+id/txtTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTip"
        android:textSize="30sp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_above="@+id/txtTotal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="24dp" />

    <TextView
        android:id="@+id/tipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dollarSign"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        android:layout_alignBaseline="@+id/txtTip"
        android:layout_alignBottom="@+id/txtTip"
        android:layout_alignLeft="@+id/btnCalc"
        android:layout_alignStart="@+id/btnCalc"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/totalResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/dollarSign"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/tipResult"
        android:layout_alignStart="@+id/tipResult"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/txtTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/totalResult"
        android:layout_alignBottom="@+id/totalResult"
        android:layout_alignLeft="@+id/txtTip"
        android:layout_alignStart="@+id/txtTip"
        android:text="@string/txtTotal"
        android:textSize="30sp" />

</RelativeLayout>
